# tacho

./: README.md  pyproject.toml  tacho
src/: tacho  tacho.py
src/tacho/: app.py
tests/: test_app.py  test_eta.py  test_progressbar.py  test_tacho.py  test_threading.py
