[tool.poetry]
name = "tacho"
version = "0.1.0"
description = "Tachometer for your apps"
authors = ["Martin Leitner-Ankerl <martin.ankerl@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/martinus/tacho"
repository = "https://github.com/martinus/tacho"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tacho = "tacho.app:main"